--- a/src/web/templates/views/post.html
+++ b/src/web/templates/views/post.html
@@ -50,10 +50,13 @@
     </div>
 
     <div class="post-footer" id="footer">
-      <a href="/posts">GO BACK</a>
       {{ .post_footer }}
     </div>
   </article>
+  <noscript>
+    <p>Ahh I see you're a man of culture!</p>
+    <p>(Because you have JavaScript disabled)</p>
+  </noscript>
 </body>
 </html>
 {{ end }}
