made tags switcher somewhat responsive

--- a/src/web/styles/theme/_post.scss
+++ b/src/web/styles/theme/_post.scss
@@ -76,4 +76,5 @@ $posts_postHighlightedTitleColor: $defLinkForeground;
 $posts_postInfoForegroundColor: $postInfoForegroundColor;
 $posts_postTagForegroundColor: $postInfoForegroundColor;
 
-$tagButtonActiveBG: $postTitleColor;
+$tagsMenuLabelFG: $postTitleColor;
+$tagButtonActiveBG: $tagsMenuLabelFG;
