--- a/src/web/styles/partials/_tags_menu.scss
+++ b/src/web/styles/partials/_tags_menu.scss
@@ -18,6 +18,7 @@
 
 @import "../theme/global";
 @import "../theme/post";
+@import "../theme/home";
 
 @mixin button {
   display: flex;
@@ -28,7 +29,7 @@
   height: 3rem;
   min-width: 8.5em;
   border-radius: 2em;
-  border: 1px solid black;
+  border: 1px solid $buttonBorderColor;
 }
 
 .tags-menu {
@@ -36,16 +37,22 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  border: 1px solid green;
 
   .tags-menu-label {
-    color: $fg-purple0;
+    color: $tagsMenuLabelFG;
   }
 
   .tags-switcher {
+    border: 1px solid green;
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
     max-height: 20em;
-    min-width: 50%;
+    width: 50%;
+    min-width: 60em;
+    max-width: 1300px;
+
     .tag-label {
       .tag {
         @include button;
@@ -57,8 +64,27 @@
         background-color: $tagButtonActiveBG;
       }
     }
+
     input[type=submit] {
       @include button;
     }
   }
+}
+
+@media screen and (max-width: 1200px) {
+  .tags-menu .tags-switcher {
+    min-height: 8em;
+    width: 70%;
+    min-width: 0;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .tags-menu .tags-switcher {
+    min-height: 8em;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 600px) {
 }
