--- a/src/web/templates/partials/tags_menu.html
+++ b/src/web/templates/partials/tags_menu.html
@@ -28,6 +28,7 @@
       {{ end }}
     </div>
     <div class="menu">
+      <input type="reset" value="Clear"/>
       <input type="submit" value="Filter"/>
     </div>
   </form>
