--- a/src/web/styles/partials/_tags_menu.scss
+++ b/src/web/styles/partials/_tags_menu.scss
@@ -20,12 +20,13 @@
 @import "../theme/post";
 @import "../theme/home";
 
+$tagButtonBG: $altBackgroundColor;
 
 @mixin button {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: $altBackgroundColor;
+  background-color: $tagButtonBG;
   color: $defForegroundColor;
   font-size: 1.1em; 
   padding: 0.5em 1.3em;
@@ -80,6 +81,13 @@
         margin: 0.1em 1em;
         .tag {
           @include button;
+          .active {
+            border: 1px solid green;
+            background-color: blue;
+          }
+        }
+        .tag.active {
+          border-color: $tagButtonActiveBG;
         }
         input {
           display: none;
