--- a/src/public/scss/projects/styles.scss
+++ b/src/public/scss/projects/styles.scss
@@ -1,23 +1,8 @@
-/*
- * macli-site: website for macli
- * Copyright (C) 2022  Vidhu Kant Sharma <vidhukant@vidhukant.xyz>
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program.  If not, see <https://www.gnu.org/licenses/>.
- */
-
 $bgColor: #1d1f21;
 $fgColor: #c5c8c6;
+
+$bgColorAlt: #373b41;
+$fgColorAlt: #ffffff;
 
 $headingColor: #bf87d0;
 // $headingColor: #8abeb7;
@@ -46,33 +31,30 @@ body {
   line-height: 1.5;
 }
 
+code {
+  background-color: $bgColorAlt;
+  padding: 2px 5px;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 80vw;
+}
+
 h1, h2 {
   color: $headingColor;
+}
+
+.colored-list li {
+  color: $headingColor;
+  p {
+    color: $fgColor;
+  }
 }
 
 .centered-text {
   text-align: center;
 }
 
-.image-with-text-flex {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 80%;
-  margin: auto;
-
-  .left {
-    margin-right: 2rem;
-  }
-
-  p {
-    display: inline;
-    font-size: 1.3rem;
-    text-align: center;
-  }
-}
-
-.spacing {
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
-}
