added body padding

--- a/src/public/scss/projects/styles.scss
+++ b/src/public/scss/projects/styles.scss
@@ -27,7 +27,7 @@ body {
   margin-right: auto;
   background-color: $bgColor;
   color: $fgColor;
-  padding: 0;
+  padding: 0.2rem 1rem;
   font-size: 1.1rem;
   line-height: 1.5;
 }
