--- a/src/public/scss/index.scss
+++ b/src/public/scss/index.scss
@@ -1,148 +1,117 @@
-footer {
-  height: 300vh;
-}
-
 .section {
+  width: 100vw;
+  height: auto;
+}
+
+p {
+  line-height: 2;
+}
+
+a {
+  color: #00ff8c;
+}
+
+.section-child {
+  box-sizing: border-box;
+  max-width: 1920px;
+  padding: 20px 25px 20px 25px;
   width: 100%;
-  height: 94vh;
-}
-
-.section-footer {
-  text-align: center;
-}
-
-#intro-section {
-  background-color: #56355d;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-#mal2go-section {
-  /*background-color: #b23a87;*/
-  background-color: #a32d6c;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#mal2go-section a {
-  color: white;
-  text-decoration: underline;
-}
-
-#mal2go-section .wrapper {
-  height: 60%;
-  width: 80%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-}
-
-#fc-2 {
-  background-color: #1a2a30;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-#intro-parent {
-  height: 60%;
-  margin-top: auto;
-  margin-bottom: auto;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: space-around;
-}
-
-#intro-parent div {
-  width: 90%;
-}
-
-#intro-parent a {
-  text-decoration: underline;
-}
-
-#image-links-container {
   height: 100%;
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  margin: auto;
 }
 
-#image-links-container img {
-  height: 50%;
-  border-radius: 50%;
+#section-1 {
+  background-color: #56355D;
 }
 
-#image-links-container .links {
-  display: flex;
-  justify-content: space-between;
-  height: 2.5rem;
-  width: 85%;
-  margin-top: 0.8rem;
-  margin-bottom: 0;
-  padding: 0;
-  font-size: 2rem;
-  list-style-position: outside;
-}
+#image-and-links {
+  $width: 18rem;
+  width: $width;
+  margin: auto;
 
-#image-links-container .links a {
-  text-decoration: underline;
-  color: #ffffff;
-  text-underline-offset: 3px;
-}
+  img {
+    display: block;
+    border-radius: 50%;
+    max-width: $width;
+  }
 
-@media screen and (max-width: 1080px) {
-  .section, #intro-section, #mal2go-section, #fc-2 {
-    flex-direction: column-reverse;
-    height: auto;
-  }
-  #mal2go-section .wrapper {
-    height: 60%;
-    width: 90%;
-  }
-  #image-links-container {
-    padding-top: 2rem;
-    height: auto;
-    width: 100%;
-  }
-  #image-links-container img {
-    min-width: 18rem;
-    width: 50%;
-  }
-  #image-links-container .links {
+  #my-links {
+    list-style: none;
+    padding: 0;
+    display: flex;
     justify-content: space-between;
-    font-size: 2rem;
-    width: 32rem;
+    width: $width;
+    a {
+      color: white;
+      font-size: 1.2rem;
+    }
   }
 }
 
-@media screen and (max-width: 800px) {
-  #image-links-container img {
-    margin-bottom: 0.5rem;
-  }
-  #image-links-container .links {
-    justify-content: space-between;
-    font-size: 1.5rem;
-    width: 60%;
-    min-width: 25rem;
-    max-width: 30rem;
+#section-2 {
+  background-color: #c90876;
+}
+
+@media only screen and (min-width: 800px) {
+  #image-and-links {
+    $width: 22rem;
+    width: $width;
+
+    img {
+      max-width: $width;
+    }
+
+    #my-links {
+      width: $width;
+      a {
+        font-size: 1.3rem;
+      }
+    }
   }
 }
 
-@media screen and (max-width: 480px) {
-  #image-links-container img {
-    margin-bottom: 1rem;
+@media only screen and (min-width: 1300px) {
+  .section {
+    height: 100vh;
   }
-  #image-links-container .links {
-    font-size: 1rem;
-    min-width: auto;
-    width: 18rem;
+  .section-child {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+  }
+  #image-and-links {
+    margin-left: 2rem;
+    $width: 22rem;
+    width: $width;
+
+    img {
+      max-width: $width;
+    }
+
+    #my-links {
+      width: $width;
+      a {
+        font-size: 1.5rem;
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .section-child {
+    width: 95%;
+  }
+  #image-and-links {
+    margin-left: 4rem;
+    $width: 24rem;
+    width: $width;
+
+    img {
+      max-width: $width;
+    }
+
+    #my-links {
+      width: $width;
+    }
   }
 }
