--- a/src/public/scss/styles.scss
+++ b/src/public/scss/styles.scss
@@ -3,14 +3,12 @@
   font-family: 'Roboto', sans-serif;
 }
 
-::selection {
+@mixin selection {
   color: #ffffff;
   background: #8215d2;
 }
-::-moz-selection {
-  color: #ffffff;
-  background: #8215d2;
-}
+::selection {@include selection;}
+::-moz-selection {@include selection;}
 
 body {
   margin: 0;
@@ -19,3 +17,11 @@ body {
   color: #ffffff;
 }
 
+footer {
+  #copyright {
+    text-align: center;
+    line-height: 1.1;
+    font-size: 1rem;
+    background-color: gray;
+  }
+}
