added a docs page

--- a/layouts/docs/baseof.html
+++ b/layouts/docs/baseof.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  {{- partial "head.html" . -}}
+  {{- partial "docs_head.html" . -}}
   <body>
     {{- partial "nav.html" . -}}
     <main>
