--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,7 +5,7 @@
     <div id="image-and-links">
       <img id="my-image" src="/images/vidhukant.jpg" alt="Vidhu Kant's Image">
       <ul id="my-links">
-        <a href="/projects">
+        <a href="/docs">
           <li>Projects</li>
         </a>
         <!--a href="/blog">
