--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,7 +6,7 @@
     </p>
     <p>
       This website is licenced under the GNU GPLv3 license.
-      The source code for this website can be found
+      The source code for this website (along with license) can be found
       <a href="https://github.com/MikunoNaka/vidhukant.xyz">here</a>.
     </p>
   </span>
