--- a/layouts/partials/docs_head.html
+++ b/layouts/partials/docs_head.html
@@ -1,8 +1,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="vidhukant.xyz - Vidhu Kant Sharma's website" />
-  <link rel="stylesheet" type="text/css" href="/css/index.css">
+  <meta name="description" content="{{ .Title }} Vidhu Kant Sharma's projects" />
+  <link rel="stylesheet" type="text/css" href="/css/blog.css">
   <link rel="stylesheet" type="text/css" href="/css/font-faces.css">
   <title>{{ .Title }} | vidhukant.xyz</title>
 </head>
