--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -1,5 +1,7 @@
 {{ define "main" }}
 <div class="single">
+  <h1 style="text-align: center;">{{ .Title }}</h1>
+  <p style="text-align: center;">{{ .Summary }}</p>
   {{ .Content }}
 </div>
 {{ end }}
