--- a/static/css/font-faces.css
+++ b/static/css/font-faces.css
@@ -22,3 +22,11 @@
   src: url("/fonts/roboto-v30-latin-500.eot"); /* IE9 Compat Modes */
   src: local(""), url("/fonts/roboto-v30-latin-500.eot?#iefix") format("embedded-opentype"), url("/fonts/roboto-v30-latin-500.woff2") format("woff2"), url("/fonts/roboto-v30-latin-500.woff") format("woff"), url("/fonts/roboto-v30-latin-500.ttf") format("truetype"), url("/fonts/roboto-v30-latin-500.svg#Roboto") format("svg"); /* Legacy iOS */
 }
+/* source-code-pro-regular - latin */
+@font-face {
+  font-family: "Source Code Pro";
+  font-style: normal;
+  font-weight: 400;
+  src: url("/fonts/source-code-pro-v21-latin-regular.eot"); /* IE9 Compat Modes */
+  src: local(""), url("/fonts/source-code-pro-v21-latin-regular.eot?#iefix") format("embedded-opentype"), url("/fonts/source-code-pro-v21-latin-regular.woff2") format("woff2"), url("/fonts/source-code-pro-v21-latin-regular.woff") format("woff"), url("/fonts/source-code-pro-v21-latin-regular.ttf") format("truetype"), url("/fonts/source-code-pro-v21-latin-regular.svg#SourceCodePro") format("svg"); /* Legacy iOS */
+}
