--- a/static/scss/font-faces.scss
+++ b/static/scss/font-faces.scss
@@ -40,3 +40,17 @@
        url('/fonts/roboto-v30-latin-500.svg#Roboto') format('svg'); /* Legacy iOS */
 }
 
+/* source-code-pro-regular - latin */
+@font-face {
+  font-family: 'Source Code Pro';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/fonts/source-code-pro-v21-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local(''),
+       url('/fonts/source-code-pro-v21-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/fonts/source-code-pro-v21-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/fonts/source-code-pro-v21-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('/fonts/source-code-pro-v21-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('/fonts/source-code-pro-v21-latin-regular.svg#SourceCodePro') format('svg'); /* Legacy iOS */
+}
+
